--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,13 @@ server:
     whitelabel: 
       enabled: false #true pour les jsp, false pour les ws (permet d'afficher des erreurs)
 
+# expose all actuator endpoints
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
 spring:
   profiles:
     active: dev
